[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/BigRock2.png" type="Texture" id=1]
[ext_resource path="res://World/BigRock3.png" type="Texture" id=2]
[ext_resource path="res://World/BigRock1.png" type="Texture" id=3]
[ext_resource path="res://World/BrokenRocks3.png" type="Texture" id=4]
[ext_resource path="res://World/BreakableRocks1.gd" type="Script" id=5]
[ext_resource path="res://World/BrokenRocks1.png" type="Texture" id=6]
[ext_resource path="res://World/BrokenRocks2.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="BreakableRocks1" type="Area2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 5 )

[node name="BR3" type="Sprite" parent="."]
self_modulate = Color( 0.713726, 0.619608, 0.619608, 1 )
position = Vector2( 14, -8 )
texture = ExtResource( 2 )

[node name="BR1" type="Sprite" parent="."]
self_modulate = Color( 0.65098, 0.658824, 0.72549, 1 )
texture = ExtResource( 3 )

[node name="BR2" type="Sprite" parent="."]
position = Vector2( 17, 5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, 3 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Broken1" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.686275, 0.6, 0.6, 1 )
position = Vector2( -1, 11 )
texture = ExtResource( 6 )

[node name="Broken2" type="Sprite" parent="."]
visible = false
position = Vector2( 15, 13 )
rotation = 3.14159
texture = ExtResource( 7 )

[node name="Broken3" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.807843, 0.819608, 0.839216, 1 )
position = Vector2( 20, 12 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 10, -2 )
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_BreakableRocks1_area_entered"]
